--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_quotationEdit.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_quotationEdit.form
@@ -2214,7 +2214,7 @@ btnremovecharge_click:function($event){&#xD;
 page_afterDataSourceLoad:function(){&#xD;
 	var quotationid=window.parent.angular.element(&quot;#indexConScope&quot;).scope().quotationid;&#xD;
 	$params.quotationid=quotationid+'';&#xD;
-	//$params.quotationid=&quot;1091&quot;;&#xD;
+	//$params.quotationid=&quot;1141&quot;;&#xD;
 	$view.ldetail.clearGridData();&#xD;
 	$view.lpayment.clearGridData();&#xD;
 	$view.lcharge.clearGridData();&#xD;
@@ -2450,7 +2450,11 @@ button_click:function($event){&#xD;
 		}&#xD;
 		&#xD;
 		$(&quot;#&quot;+quotationPriceid).val(parseFloat(price).toFixed(3));&#xD;
-		&#xD;
+		var overflowid = selectid + &quot;_overflow&quot;;&#xD;
+		if($params.estimate==true&amp;&amp;parseInt(data.price)==&quot;0&quot;)&#xD;
+			$(&quot;#&quot;+overflowid).text(0+&quot;%&quot;);&#xD;
+		else&#xD;
+			$(&quot;#&quot;+overflowid).text(m_overflowlv+&quot;%&quot;);&#xD;
 	}&#xD;
 },&#xD;
 &#xD;
@@ -2477,6 +2481,7 @@ button1_click:function($event){&#xD;
 		return false;&#xD;
 	}&#xD;
 	var oneprice = parseFloat(value)/parseFloat(totalqty);&#xD;
+	debugger;&#xD;
 	for(var i=0; i&lt;adata.length; i++)  &#xD;
 	{  &#xD;
 		var data = adata[i];&#xD;
@@ -2485,8 +2490,15 @@ button1_click:function($event){&#xD;
 		var price = parseFloat(qty) * parseFloat(oneprice);&#xD;
 		&#xD;
 		var quotationPriceid = selectid + &quot;_quotationPrice&quot;;&#xD;
-		$(&quot;#&quot;+quotationPriceid).val(parseFloat(price).toFixed(3));&#xD;
 		&#xD;
+		$(&quot;#&quot;+quotationPriceid).val(parseFloat(oneprice).toFixed(3));&#xD;
+		var m_overflowlv=parseFloat(parseFloat(oneprice-data.price)/parseFloat(data.price)).toFixed(3)*100;&#xD;
+		var overflowid = selectid + &quot;_overflow&quot;;&#xD;
+		&#xD;
+		if($params.estimate==true&amp;&amp;parseInt(data.price)==&quot;0&quot;)&#xD;
+			$(&quot;#&quot;+overflowid).text(0+&quot;%&quot;);&#xD;
+		else&#xD;
+			$(&quot;#&quot;+overflowid).text(m_overflowlv+&quot;%&quot;);&#xD;
 	}&#xD;
 },&#xD;
 &#xD;
@@ -2508,6 +2520,9 @@ pricechange:function(rowobject)&#xD;
 	rowobject.overflow = parseFloat(overflow)*100;&#xD;
 		&#xD;
 	var overflowid = rowid + &quot;_overflow&quot;;&#xD;
+	if($params.estimate==true&amp;&amp;parseInt(rowobject.price)==&quot;0&quot;)&#xD;
+			$(&quot;#&quot;+overflowid).text(0+&quot;%&quot;);&#xD;
+	else&#xD;
 	$(&quot;#&quot;+overflowid).text(rowobject.overflow+&quot;%&quot;);&#xD;
 },&#xD;
 &#xD;
