--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_quotationList.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_quotationList.form
@@ -466,10 +466,6 @@
             <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
             <dync:children/>
           </dync:attribute>
-          <dync:attribute default="true" group="表格设置" id="firstRequest" name="自动加载数据" value="false">
-            <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
-            <dync:children/>
-          </dync:attribute>
           <dync:attribute default="id" group="表格设置" id="tableKey" name="主键属性" value="lineid">
             <dync:render colSpan="1" height="0" multi="false" name="text"/>
             <dync:children/>
@@ -482,6 +478,16 @@
             <dync:render colSpan="1" height="0" multi="false" name="event">
               <dync:item name="param" value="rowid,status,e"/>
             </dync:render>
+            <dync:children/>
+          </dync:attribute>
+          <dync:attribute default="" group="加载事件" id="beforeProcessing" name="处理前" value="maindata_beforeProcessing(data,status,xhr)">
+            <dync:render colSpan="1" height="0" multi="false" name="event">
+              <dync:item name="param" value="data,status,xhr"/>
+            </dync:render>
+            <dync:children/>
+          </dync:attribute>
+          <dync:attribute default="true" group="表格设置" id="firstRequest" name="自动加载数据" value="false">
+            <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
             <dync:children/>
           </dync:attribute>
         </form:attributes>
@@ -638,6 +644,12 @@
               <dync:children/>
             </dync:attribute>
           </form:attributes>
+        </form:control>
+        <form:validation/>
+      </form:child>
+      <form:child xsi:type="form:Field" binding="estimate" id="estimate" name="是否暂估" customize="true">
+        <form:control type="widget/col_jqgrid">
+          <form:attributes source="widget/col_jqgrid"/>
         </form:control>
         <form:validation/>
       </form:child>
@@ -1342,5 +1354,20 @@ maindata_onSelectRow:function(rowid,status,e){
 		debugger;
 		if(lineid!=undefined)
 		functions.showdetail(lineid);
+},
+
+maindata_beforeProcessing:function(data,status,xhr){
+	var l=data.contents.length;
+	for(var i=0;i&lt;l;i++){   
+		var obj=data.contents[i].estimate;
+		switch(obj)
+		{case &quot;0&quot;:obj=&quot;否&quot;;
+		break;
+		case &quot;1&quot;:obj=&quot;是&quot;	;
+		break;
+		
+		}
+		data.contents[i].estimate=obj;
+	}
 }</form:scripts>
 </form:Form>
