--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_shipperInfoManage.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_shipperInfoManage.form
@@ -497,18 +497,6 @@
             <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
             <dync:children/>
           </dync:attribute>
-          <dync:attribute default="asc" group="排序" id="sortorder" name="排序方式" value="desc">
-            <dync:render colSpan="1" height="0" multi="false" name="select">
-              <dync:item name="空" value=""/>
-              <dync:item name="正序" value="asc"/>
-              <dync:item name="倒序" value="desc"/>
-            </dync:render>
-            <dync:children/>
-          </dync:attribute>
-          <dync:attribute default="" group="排序" id="sortname" name="排序列" value="audit_time">
-            <dync:render colSpan="1" height="0" multi="false" name="text"/>
-            <dync:children/>
-          </dync:attribute>
         </form:attributes>
       </form:control>
       <form:child xsi:type="form:Field" binding="lineId" id="lineId" name="初审表主键" customize="true">
@@ -750,10 +738,6 @@
               <dync:render colSpan="1" height="0" multi="false" name="text"/>
               <dync:children/>
             </dync:attribute>
-            <dync:attribute default="false" group="表格设置" id="sortable" name="排序" value="true">
-              <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
-              <dync:children/>
-            </dync:attribute>
           </form:attributes>
         </form:control>
         <form:validation/>
@@ -895,9 +879,9 @@
   <form:datasources>
     <form:datasource xsi:type="form:Inputs"/>
     <form:datasource xsi:type="form:PagingDataSource" id="custom_shipperinfo" name="分供方信息" logic="com.unlcn.ils.tps.services.ShipperInfoManageService" pageSize="10" type="custom"/>
-    <form:datasource xsi:type="form:LogicDataSource" id="provinces" name="省份map" logic="rule:com.unlcn.ils.tps.s_provinces" sn="s_provinces"/>
-    <form:datasource xsi:type="form:LogicDataSource" id="cities" name="城市map" logic="rule:com.unlcn.ils.tps.s_cities" sn="s_cities"/>
-    <form:datasource xsi:type="form:LogicDataSource" id="provincesid" name="省份id" logic="rule:com.unlcn.ils.tps.s_provincesids" sn="s_provincesids"/>
+    <form:datasource xsi:type="form:LogicDataSource" id="provinces" name="省份map" sn="s_provinces" logic="rule:com.unlcn.ils.tps.s_provinces"/>
+    <form:datasource xsi:type="form:LogicDataSource" id="cities" name="城市map" sn="s_cities" logic="rule:com.unlcn.ils.tps.s_cities"/>
+    <form:datasource xsi:type="form:LogicDataSource" id="provincesid" name="省份id" sn="s_provincesids" logic="rule:com.unlcn.ils.tps.s_provincesids"/>
     <form:datasource xsi:type="form:EntityDataSource" id="e_joinDriver" name="单实体数据源" entity="entity:com.unlcn.ils.tps.e_join_driver"/>
     <form:datasource xsi:type="form:EntityDataSource" id="e_audit" name="单实体数据源" entity="entity:com.unlcn.ils.tps.e_audit"/>
   </form:datasources>
